--- a/src/components/WeatherWidget.css
+++ b/src/components/WeatherWidget.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: #f3f2f2;
-    width: 400px;
+    width: 360px;
     height: 200px;
     color: black;
     border-radius: 25px;
@@ -13,6 +13,7 @@
     flex-direction: row;
     align-items: center;
     margin: 1rem 1rem;
+    background-color: transparent;
 }
 
 .temp {
@@ -30,6 +31,16 @@
     font-size: 1.5rem;
     font-weight: 400;
     margin: 0.5rem;
+}
+
+.location-container {
+    display: flex;
+    align-items: center;
+}
+
+.location-icon {
+    margin: 0 0.3rem;
+    font-size: 1em;
 }
 
 .current-city {
