--- a/src/SafetyPage.css
+++ b/src/SafetyPage.css
@@ -1,5 +1,5 @@
 .safetyPageContainer {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     min-height: 100vh;
 }
@@ -26,8 +26,8 @@ ol {
     border-radius: 25px;
 }
 nav ul {
-    background-color: #b4c4b3;
-    border-radius: 25px;
+    border-top: 1px solid #35523c;
+    border-bottom: 1px solid #35523c;
     list-style: none; /* Removes bullets */
     padding: 10px 20px;
     margin: 0;        /* Removes default margin */
@@ -36,6 +36,20 @@ nav ul {
   
 nav li {
     display: inline;    /* Makes list items display in-line */
-    margin-right: 10px; /* Adds some space between the list items */
+    margin: 0 5rem;
 }
-  
+
+.safetyPageContainer a:visited {
+    color: inherit; 
+    text-decoration: none; 
+}
+
+.safetyPageContainer a:hover {
+    font-weight: bold;
+    text-decoration: none; 
+}
+
+.safetyPageContainer a {
+    color: black; 
+    text-decoration: none; 
+}
